Fixed bug with overflow on video wrapper One step closer to fix #243

--- a/files/static/less/article.less
+++ b/files/static/less/article.less
@@ -114,6 +114,7 @@ section#article_archive {
 
 .video-container {
     background-color: #000;
+    overflow: auto;
 }
 
 .flex-video {
